# Lunarr

./: .editorconfig  .gitignore  CLAUDE.md  README.md  Taskfile.yml  compose.dev.yml  docker-compose-dev.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
a2a-sidecar/: CLAUDE.md  README.md  Taskfile.yml  go.mod  go.sum
a2a-sidecar/cmd/sidecar/: main.go
a2a-sidecar/internal/config/: config.go
a2a-sidecar/internal/handler/: health.go
a2a-sidecar/internal/proxy/: executor.go  options.go  translator.go  translator_a2a.go
a2a-sidecar/internal/server/: server.go
agent-broker/: .env.example  go.mod  go.sum
agent-broker/api/: openapi.yaml
agent-broker/cmd/broker/: main.go
agent-broker/internal/agent/: broker.go
agent-broker/internal/agent/tools/: broadcast.go  discover.go  route.go  types.go
agent-broker/internal/config/: config.go
agent-broker/internal/handler/: admin.go  broker.go
agent-broker/internal/registry/: registry.go
agent-broker/internal/store/: memory.go  qdrant.go  store.go
agent-broker/tests/integration/: qdrant_store_test.go
agent-runtime/: CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
api/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
api/app/: config.py  memory.py
desktop/: package.json
desktop/src/: App.tsx
desktop/src-tauri/: tauri.conf.json
docker/: Dockerfile.microsandbox
example/hello_world_a2a_agent/: Dockerfile  README.md  requirements.txt
example/hello_world_agent/: Dockerfile  README.md  main.py
